<resources>
    <string name="app_name">고톡</string>
    <string name="edit_email">이메일을 입력하세요</string>
    <string name="edit_pwd">비밀번호를 입력하세요</string>
    <string name="edit_email_pwd">이메일, 비밀번호를 입력하세요</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="register">회원가입</string>
    <string name="close">닫기</string>
    <string name="google_login">구글 로그인</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>
    <string name="email_not_verified">이메일 인증이 필요합니다</string>
    <string name="pwd_length">비밀번호는 6자 이상이어야 합니다</string>
    <string name="register_success">회원가입 완료 이메일 인증 후 로그인 하세요</string>
    <string name="register_fail">회원가입 실패</string>
    <string name="none_user">사용자 정보를 가져올 수 없습니다.</string>
    <string name="default_web_client_id">xxxxx.apps.googleusercontent.com</string>
    <string name="google_login_fail">구글 로그인 실패</string>
    <string name="google_login_success">구글 로그인 성공</string>
    <string name="btn_dialog_cancel">취소</string>
    <string name="btn_dialog_okay">확인</string>
    <string name="toolbar_search">검색</string>
    <string name="toolbar_add">친구 추가</string>
    <string name="start_talk">채팅 시작하기</string>
    <string name="login_completed">%s님 환영합니다 </string>
    <string name="myself">나</string>
    <string name="friend">친구</string>
    <string name="login_info">%s \n %s</string>
    <string name="bottom_sheet_camera">사진 찍기</string>
    <string name="bottom_sheet_album">앨범에서 선택하기</string>
    <string name="bottom_sheet_chat">채팅하기</string>
    <string name="bottom_sheet_set_profile">프로필 사진 설정</string>
    <string name="accept">수락</string>
    <string name="decline">거절</string>
    <string name="friend_req">친구 요청</string>
    <string name="no_friend_req">친구 요청이 없습니다</string>
    <string name="delete_friend">친구 삭제</string>
    <string name="delete_confirm">정말 삭제하시겠습니까?</string>
    <string name="delete_yes">예</string>
    <string name="delete_no">아니오</string>
    <string name="send_fail">메시지 전송에 실패했습니다</string>
    <string name="chat_edit_hint">이미지 선택 시 텍스트 입력 불가</string>
</resources>